// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Sensitive > metadata > should merge digest and bare sensitive metadata into the fields 1`] = `
[
  {
    "decorator": "Field",
    "default": null,
    "enum": null,
    "key": "passwordHash",
    "max": null,
    "min": null,
    "nullable": false,
    "optional": false,
    "schema": null,
    "sensitive": {
      "digest": "sha256",
    },
    "transform": null,
    "type": "string",
  },
  {
    "decorator": "Field",
    "default": null,
    "enum": null,
    "key": "apiToken",
    "max": null,
    "min": null,
    "nullable": false,
    "optional": false,
    "schema": null,
    "sensitive": {
      "digest": null,
    },
    "transform": null,
    "type": "string",
  },
  {
    "decorator": "Field",
    "default": null,
    "enum": null,
    "key": "name",
    "max": null,
    "min": null,
    "nullable": false,
    "optional": false,
    "schema": null,
    "sensitive": null,
    "transform": null,
    "type": "string",
  },
]
`;

exports[`Sensitive > metadata > should stage a fully-resolved null digest for a bare @Sensitive 1`] = `
{
  "decorator": "Sensitive",
  "key": "apiToken",
  "sensitive": {
    "digest": null,
  },
}
`;

exports[`Sensitive > metadata > should stage the field modifier 1`] = `
{
  "decorator": "Sensitive",
  "key": "passwordHash",
  "sensitive": {
    "digest": "sha256",
  },
}
`;
